# flow-catalyst

./: .gitignore  ANALYSIS_INDEX.md  ASYNC-SQS-PLAN.md  BUILD_QUICK_REFERENCE.md  CLAUDE.md  COMPREHENSIVE_ARCHITECTURE_ANALYSIS.md  DEVELOPER_GUIDE.md  Domain-Architecture.md  EXPLORATION_SUMMARY.txt  MESSAGE_ROUTER_COMPARISON.md  Makefile  README-LOCAL-DEV.md  README.md  docker-compose.dev.yml  docker-compose.yml  gradle.properties  settings.gradle.kts
clients/laravel/flowcatalyst-sdk/config/: flowcatalyst.php
clients/laravel/flowcatalyst-sdk/src/: FlowCatalystServiceProvider.php
core/flowcatalyst-app/: build.gradle.kts
core/flowcatalyst-auth/: build.gradle.kts
core/flowcatalyst-benchmark/: build.gradle.kts
core/flowcatalyst-bffe/: build.gradle.kts
core/flowcatalyst-control-plane-bffe/: README.md  build.gradle.kts
core/flowcatalyst-core/: build.gradle.kts
core/flowcatalyst-dev-build/: README.md  build.gradle.kts
core/flowcatalyst-message-router/: AUTHENTICATION_IMPLEMENTATION.md  DEBUGGING_GUIDE.md  NATIVE_BUILD_GUIDE.md  STANDBY_IMPLEMENTATION.md  STANDBY_REDISSON.md  TRAFFIC_MANAGEMENT.md  build.gradle.kts
core/flowcatalyst-platform/: build.gradle.kts
core/flowcatalyst-postbox/: build.gradle.kts
core/flowcatalyst-standby/: build.gradle.kts
core/flowcatalyst-stream-processor/: build.gradle.kts
docs/: AUTH-REFACTOR-DESIGN.md  AUTH_IDP_IMPLEMENTATION_PLAN.md  AUTH_IMPLEMENTATION_PLAN_POSTGRESQL.md  AUTH_TEST_PLAN.md  IDP-PERMISSION-SYNC.md  IMPLEMENTATION-COMPLETE.md  INTEGRATION_E2E_TEST_PLAN.md  JAVA-VS-TYPESCRIPT-INTEGRATION-ANALYSIS.md  MESSAGE_GROUP_ARCHITECTURE_REFACTORING.md  MESSAGE_GROUP_FIFO.md  MESSAGE_GROUP_FIFO_IMPLEMENTATION_SUMMARY.md  MESSAGE_GROUP_FIFO_TEST_PLAN.md  MONGODB-MIGRATION-STRATEGY.md  PERMISSION-ROLE-SYSTEM.md  STABILITY-WORK-HISTORICAL-NOTE.md  TEST-OUTPUT-GUIDE.md  TESTING-QUICK-REFERENCE.md  TESTING.md  TEST_PLAN_SUMMARY.md  TYPESCRIPT-BFFE-ARCHITECTURE.md  TYPESCRIPT-BFFE-DECISION.md  TYPESCRIPT-BFFE-QUICKSTART.md  architecture.md  auth-architecture.md  dashboard-implementation.md  database-strategy.md  dispatch-jobs.md  http-status-handling.md  message-router.md  mongodb-migration-plan.md  phase-1-implementation-summary.md  phase-2-implementation-summary.md  stability-fixes-implementation-plan.md  stability-improvements.md  typescript-domain-services-framework.md
flowcatalyst-app/: build.gradle.kts
flowcatalyst-app/src/main/resources/: application.properties
flowcatalyst-core/: build.gradle.kts
flowcatalyst-core/src/main/docker/: Dockerfile.native
flowcatalyst-core/src/main/resources/: application.properties
flowcatalyst-core/src/test/resources/: application.properties
flowcatalyst-go/: Makefile  go.mod  go.sum
flowcatalyst-go/cmd/flowcatalyst/: main.go
flowcatalyst-go/cmd/outbox/: main.go
flowcatalyst-go/cmd/platform/: main.go
flowcatalyst-go/cmd/router/: main.go
flowcatalyst-go/cmd/stream/: main.go
flowcatalyst-go/internal/common/leader/: election.go  redis_election.go
flowcatalyst-go/internal/common/lifecycle/: manager.go
flowcatalyst-go/internal/common/metrics/: metrics.go
flowcatalyst-go/internal/common/mongo/: client.go  indexes.go
flowcatalyst-go/internal/outbox/: api_client.go  entity.go  processor.go  repository.go  repository_mongo.go  repository_mysql.go  repository_postgres.go
flowcatalyst-go/internal/platform/api/: admin_anchor_domains.go  admin_applications.go  admin_auth_config.go  admin_clients.go  admin_oauth_clients.go  admin_principals.go  audit.go  bff_dispatch_jobs.go  bff_event_types.go  bff_events.go  bff_raw_dispatch_jobs.go  bff_raw_events.go  bff_roles.go  dispatch_jobs.go  dispatch_processing.go  events.go  eventtype_handler.go  handlers.go  middleware.go  response.go  role_handler.go  serviceaccount_handler.go  subscriptions.go
flowcatalyst-go/internal/platform/application/: entity.go  repository.go
flowcatalyst-go/internal/platform/audit/: context.go
flowcatalyst-go/internal/platform/auth/: handlers.go
flowcatalyst-go/internal/scheduler/: block_checker.go  scheduler.go
flowcatalyst-go/internal/stream/: processor.go  projection.go  watcher.go
flowcatalyst-message-router/: build.gradle.kts
flowcatalyst-router-app/: build.gradle.kts
flowcatalyst-rust/: BINARIES.md  Cargo.toml  Dockerfile.router  Makefile
flowcatalyst-rust/.cargo/: config.toml
flowcatalyst-rust/crates/fc-api/: Cargo.toml
flowcatalyst-rust/crates/fc-api/resources/: dashboard.html
flowcatalyst-rust/crates/fc-api/src/: auth.rs  lib.rs  model.rs
flowcatalyst-rust/crates/fc-api/tests/: api_tests.rs
flowcatalyst-rust/crates/fc-common/: Cargo.toml
flowcatalyst-rust/crates/fc-config/: Cargo.toml
flowcatalyst-rust/crates/fc-config/src/: lib.rs  loader.rs
flowcatalyst-rust/crates/fc-outbox/: Cargo.toml
flowcatalyst-rust/crates/fc-outbox/src/: buffer.rs  enhanced_processor.rs  group_distributor.rs  http_dispatcher.rs  lib.rs  message_group_processor.rs  mongo.rs  mysql.rs  postgres.rs  repository.rs  sqlite.rs
flowcatalyst-rust/crates/fc-platform/: Cargo.toml
flowcatalyst-rust/crates/fc-queue/: Cargo.toml
flowcatalyst-rust/crates/fc-router/: Cargo.toml
flowcatalyst-rust/crates/fc-router/resources/: dashboard.html
flowcatalyst-rust/crates/fc-router/src/: config_sync.rs  health.rs  lib.rs  lifecycle.rs  manager.rs  mediator.rs  metrics.rs  pool.rs  warning.rs
flowcatalyst-rust/crates/fc-router/src/api/: auth.rs  mod.rs
flowcatalyst-rust/crates/fc-router/tests/: fifo_tests.rs  integration_tests.rs  manager_tests.rs  mediator_tests.rs  pool_tests.rs  rate_limit_tests.rs
flowcatalyst-rust/crates/fc-scheduler/: Cargo.toml
flowcatalyst-rust/crates/fc-secrets/: Cargo.toml
flowcatalyst-rust/crates/fc-standby/: Cargo.toml
flowcatalyst-rust/crates/fc-standby/src/: leader.rs
flowcatalyst-rust/crates/fc-stream/: Cargo.toml
flowcatalyst-rust/crates/fc-stream/src/: batch_dispatcher.rs  checkpoint.rs  checkpoint_tracker.rs  config.rs  health.rs  lib.rs  projection.rs  watcher.rs
website/: index.html
website/public/: index.html
(+869 files in other folders)
