[package]
name = "fc-api"
version = "0.1.0"
edition = "2021"

[dependencies]
fc-common = { path = "../fc-common" }
fc-queue = { path = "../fc-queue" }
fc-router = { path = "../fc-router" }
fc-standby = { path = "../fc-standby" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
base64 = "0.22"
rand = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
tokio-test = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
