[package]
name = "fc-config"
version = "0.1.0"
edition = "2021"
description = "FlowCatalyst configuration system with TOML support"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# TOML parsing
toml = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
