[package]
name = "fc-standby"
version = "0.1.0"
edition = "2021"
description = "Redis-based leader election for FlowCatalyst standby mode"

[dependencies]
fc-common = { path = "../fc-common" }
tokio = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
